[package]
name = "pwnghost"
version = "3.3.6"
edition = "2021"
description = "PwnGhost — the Rust-forged WiFi capture daemon for Pi Zero 2W"
license = "GPL-3.0"

[dependencies]
embedded-graphics = "0.8"
embedded-graphics-core = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
rand = "0.8"
png = "0.17"
profont = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9", default-features = false, features = [], optional = true }
dbus-crossroads = { version = "0.5", optional = true }

# aarch64 only (Pi Zero 2W 64-bit)
[target.'cfg(target_arch = "aarch64")'.dependencies]
rppal = "0.22"

# 32-bit ARM (Pi Zero 2W 32-bit + Pi Zero W)
[target.'cfg(target_arch = "arm")'.dependencies]
linux-embedded-hal = "0.2"
spidev = "0.4"
sysfs_gpio = "0.6"
i2cdev = "0.6"

# dbus optional for cross-compilation without pkg-config
[features]
default = []
with-dbus = ["dbus", "dbus-crossroads"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 4
strip = true
panic = "abort"
